endpoint for creating and getting all categories
